--- a/work.ipynb
+++ b/work.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import scipy\n",
     "import torch as T\n",
-    "from scipy.sparse import csr_matrix\n",
+    "from scipy.sparse import csr_matrix, dok_matrix\n",
     "import sys\n",
     "import cmath\n",
     "import time\n",
@@ -37,6 +37,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sparse_ohe(df, col):\n",
+    "    cats = df[col].unique()\n",
+    "    colarray = df[col].values\n",
+    "    # construct a sparse matrix of the appropriate size and an appropriate,\n",
+    "    # memory-efficient dtype\n",
+    "    spmtx = dok_matrix((df.shape[0], vals.shape[0]), dtype=np.uint8)\n",
+    "    # do the encoding\n",
+    "    spmtx[np.where(colaray.reshape(-1, 1) == vals.reshape(1, -1))] = 1\n",
+    "\n",
+    "    # Construct a SparseDataFrame from the sparse matrix\n",
+    "    dfnew = pd.SparseDataFrame(spmtx, dtype=np.uint8, index=df.index,\n",
+    "                               columns=['cat' + '_' + str(x) for x in cats])\n",
+    "    dfnew.fillna(0, inplace=True)\n",
+    "    return dfnew\n",
+    "\n",
     "def get_cat_matches(df, id_col, cat_col):\n",
     "    df = df[[id_col, cat_col]]\n",
     "    \n",
